Resources/public/css/hallo.css
/* Editable elements */
[contenteditable]{
    position: relative;
    outline: none;
    padding: 5px 5px 0;
    border-left: 1px dotted #fff;
    border-right: 1px dotted #fff;
}

[contenteditable]:hover{
    border-left: 1px solid #ccc;
    border-right: 1px solid #ccc;
    cursor: pointer;
}

[contenteditable] img:hover, [contenteditable] img:active{
    cursor: move;
}

[contenteditable].inEditMode{
    cursor: text;
    border-left: 3px solid #000;
    border-right: 3px solid #000;
    border-bottom: 3px solid #000;
    padding: 20px 10px;
    border-bottom-right-radius: 5px;
    border-bottom-left-radius: 5px;
}

#content [contenteditable] a{
    color: #00add2;
}

/* Edit Button */
.editButton{
    outline: none;
    position: absolute;
    top: 10px;
    right: 0;
    padding: 3px 25px 2px 10px;
    color: #fff;
    border-top-left-radius: 5px;
    border-bottom-left-radius: 5px;
    font-size: 14px;
    font-weight: bold;
    line-height: 1.6;
    cursor: pointer;
    background: rgba(0, 0, 0, 0.8) url(/bundles/liipvie/img/editIcon.png) no-repeat 36px 3px;
}

.inEditMode .editButton{
    display: none;
}
/* End Edit Button */

#savebutton{
    background: #222;
    display: none;
    padding: 5px 10px 6px;
    color: #fff;
    -moz-border-radius: 5px;
    -webkit-border-radius: 5px;
    position: relative;
    cursor: pointer;
    margin: 15px 0 0;
}

#savebutton:hover{
    background-color: #111;
    color: #fff;
}

/* Toolbar */
.hallotoolbar{
    width: 800px;
    border-top-right-radius: 5px;
    border-top-left-radius: 5px;
    z-index: 100;
}

/* jQueryUI OVERRIDES */
.hallotoolbar .ui-state-default{ border: none; }

.hallotoolbar .ui-button{
    margin: 0 0 0 1px;
    color: #fff;
    box-shadow: none;
    height: 33px;
    width: 26px;
    -webkit-transition: none;
    -moz-transition: none;
    -o-transition: none;
}

.hallotoolbar .ui-button-text-only .ui-button-text{
    padding: 0;
    margin: 0;
}

.hallotoolbar .ui-button-text .ui-button-text{
    display: block;
    height: 22px;
    width: 17px;
    margin: 0;
    padding: 0;
    text-indent: 1000px;
    overflow: hidden;
}

.hallotoolbar .ui-buttonset{
    display: inline-block;
    margin: 0;
}

/**********************************/
/* Special styling of button rows */
/**********************************/
.hallotoolbar .halloButtonrow {
    background-color: #000000;
}

/* Only apply this block if there is another line in the toolbar */
.hallotoolbar .halloButtonrow-1:not(:last-child) {
    background-color: #272727;
    text-align: right;
    width: auto;
    margin-left: 890px;
    border-top-left-radius: 5px;
    border-top-right-radius: 5px;
    padding: 0px 5px;
}

.hallotoolbar .halloButtonrow-1:last-child {
    border-top-right-radius: 5px;
}

.hallotoolbar .halloButtonrow:last-of-type {
    border-top-left-radius: 5px;
}

.hallotoolbar .halloButtonrow-2 .ui-buttonset {
    background: url(/bundles/liipvie/img/stripe.png) no-repeat right 5px;
    padding: 0 6px 0 5px;
}




.hallotoolbar .ui-buttonset:last-child{
    border-right: 0;
}

.editButton{
    outline: none;
    position: absolute;
    top: 10px;
    right: 0;
    padding: 3px 25px 2px 10px;
    color: #fff;
    border-top-left-radius: 5px;
    border-bottom-left-radius: 5px;
    font-size: 14px;
    font-weight: bold;
    line-height: 1.6;
    cursor: pointer;
    background: rgba(0, 0, 0, 0.8) url(/bundles/liipvie/img/editIcon.png) no-repeat 36px 3px;
}

.hallotoolbar .ui-buttonset:last-child{ background: none; }
/* END jQueryUI OVERRIDES */

/**********************/
/* Buttons in Toolbar */
/**********************/
.ui-buttonset .ui-button.ui-state-active{ background: none; }

/* Format */
.hallotoolbar .ui-buttonset .bold_button{ background: url(/bundles/liipvie/img/buttons.png) no-repeat -144px -35px; }
.hallotoolbar .ui-buttonset .bold_button.ui-state-active,
.hallotoolbar .ui-buttonset .bold_button:hover{ background-position: -144px -2px; }

.hallotoolbar .ui-buttonset .italic_button{ background: url(/bundles/liipvie/img/buttons.png) no-repeat -171px -35px; }
.hallotoolbar .ui-buttonset .italic_button.ui-state-active,
.hallotoolbar .ui-buttonset .italic_button:hover{ background-position: -171px -2px; }

.hallotoolbar .ui-buttonset .underline_button{ background: url(/bundles/liipvie/img/buttons.png) no-repeat -199px -35px; }
.hallotoolbar .ui-buttonset .underline_button.ui-state-active,
.hallotoolbar .ui-buttonset .underline_button:hover{ background-position: -199px -2px; }

/* Lists */
.hallotoolbar .ui-buttonset .Unordered_button{ background: url(/bundles/liipvie/img/buttons.png) no-repeat -254px -36px; }
.hallotoolbar .ui-buttonset .Unordered_button.ui-state-active,
.hallotoolbar .ui-buttonset .Unordered_button:hover{ background-position: -254px -2px; }

/* Justify */
.hallotoolbar .ui-buttonset .Left_button{ background: url(/bundles/liipvie/img/buttons.png) no-repeat -298px -36px; }
.hallotoolbar .ui-buttonset .Left_button.ui-state-active,
.hallotoolbar .ui-buttonset .Left_button:hover{ background-position: -298px -2px; }

.hallotoolbar .ui-buttonset .Center_button{ background: url(/bundles/liipvie/img/buttons.png) no-repeat -327px -36px; }
.hallotoolbar .ui-buttonset .Center_button.ui-state-active,
.hallotoolbar .ui-buttonset .Center_button:hover{ background-position: -327px -2px; }

.hallotoolbar .ui-buttonset .Right_button{ background: url(/bundles/liipvie/img/buttons.png) no-repeat -357px -36px; }
.hallotoolbar .ui-buttonset .Right_button.ui-state-active,
.hallotoolbar .ui-buttonset .Right_button:hover{ background-position: -357px -2px; }

/* Paragraph & Heading */
.hallotoolbar .ui-buttonset .p_button{ background: url("/bundles/liipvie/img/headings.png") no-repeat -4px -35px; }
.hallotoolbar .ui-buttonset .p_button.ui-state-active,
.hallotoolbar .ui-buttonset .p_button:hover{ background-position: -4px -2px; }

.hallotoolbar .ui-buttonset .h1_button{ background: url("/bundles/liipvie/img/headings.png") no-repeat -31px -35px; }
.hallotoolbar .ui-buttonset .h1_button.ui-state-active,
.hallotoolbar .ui-buttonset .h1_button:hover{ background-position: -31px -2px; }

.hallotoolbar .ui-buttonset .h2_button{ background: url("/bundles/liipvie/img/headings.png") no-repeat -58px -35px; }
.hallotoolbar .ui-buttonset .h2_button.ui-state-active,
.hallotoolbar .ui-buttonset .h2_button:hover{ background-position: -58px -2px; }

.hallotoolbar .ui-buttonset .h3_button{ background: url("/bundles/liipvie/img/headings.png") no-repeat -85px -35px; }
.hallotoolbar .ui-buttonset .h3_button.ui-state-active,
.hallotoolbar .ui-buttonset .h3_button:hover{ background-position: -85px -2px; }

/* Anchor */
.hallotoolbar .ui-buttonset .anchor_button{ background: url("/bundles/liipvie/img/imagelink.png") no-repeat -91px -36px; }
.hallotoolbar .ui-buttonset .anchor_button.ui-state-active,
.hallotoolbar .ui-buttonset .anchor_button:hover{ background-position: -91px -2px; }

/* Image */
.hallotoolbar .ui-buttonset .image_button{ background: url("/bundles/liipvie/img/imagelink.png") no-repeat -13px -36px; }
.hallotoolbar .ui-buttonset .image_button.ui-state-active,
.hallotoolbar .ui-buttonset .image_button:hover{ background-position: -13px -2px; }


/* END Buttons */

/****************/
/* Image Dialog */
/****************/
.ui-dialog {
    -webkit-box-shadow: none;
    -moz-box-shadow: none;
    box-shadow: none;
    border: 3px solid black;
    border-radius: 5px;
    overflow: visible;
}

.ui-dialog .ui-dialog-content { padding: 0; }


/* Title bar */
.ui-dialog .ui-dialog-titlebar {
    background: #000000;
    color: white;
    padding: 5px 10px;
    border: none;
}

.ui-dialog .ui-dialog-title {
    font-weight: normal;
    text-shadow: none;
}

.ui-dialog .ui-dialog-titlebar-close {
    background: url(/bundles/liipvie/img/close_button.png) no-repeat 0px -25px;
    top: -2px;
    right: -11px;
    width: 25px;
    height: 25px;
}

.ui-dialog .ui-dialog-titlebar-close:hover {
    background-position: 0px 0px;
}

/* Nav/Tabs */
.ui-dialog .halloimage-dialognav {
    height: 35px;
    width: 100%;
}

.ui-dialog .halloimage-tabs {
    text-transform: uppercase;
    font-size: 10px;
    color: white;
    height: 30px;
    line-height: 30px;
}

.ui-dialog .halloimage-tabs {
    display: table;
    width: 100%;
}

.ui-dialog .halloimage-tabs li {
    display: table-cell;
    padding: 0 5px;
    cursor: pointer;
    background: #01add2 url(/bundles/liipvie/img/divider.png) no-repeat right;
    padding: 3px 6px 0 5px;
    text-align: center;
}
.ui-dialog .halloimage-tabs li:hover {
    background-color: #32AAC8;
}

.ui-dialog .halloimage-tabs li:last-of-type {
    background-image: none;
}

.halloimage-tab-search, .halloimage-tab-upload {
    display: none;
}

.ui-dialog .halloimage-tab-activeIndicator {
    vertical-align: top;
    margin-left: 50px;
}


/* Content */
.halloimage-dialogcontent {
    text-align: center;
    padding: 15px;
}

.halloimage-activeImage, .halloimage-activeImageBg {
    -moz-transform: rotate(-3deg);
    -webkit-transform: rotate(-3deg);
    padding: 3px;
    box-shadow: 4px 4px 7px #888;
    max-width: 200px;
    max-height: 150px;
    /* cursor: move; */
}

.halloimage-activeImageBg {
    opacity: 0.2;
    position: absolute;
}

.halloimage-activeImage:hover {
    position: relative;
    left: -20px;
    -moz-transform: rotate(-6deg);
    -webkit-transform: rotate(-6deg);
}

.halloimage-activeImageContainer {
    padding-top: 20px;
}

.halloimage-activeImageAligner {
    display: table;
    margin-left: auto;
    margin-right: auto;
}

.halloimage-imageThumbnail {
    max-width: 45px;
    max-height: 45px;
    padding: 2px;
    border: 1px solid #E1E1E1;
    box-shadow: 2px 2px 4px #888;
}

.halloimage-imageThumbnail:hover {
    border: 1px solid #01add2;
}

.halloimage-imageThumbnailActive, .halloimage-imageThumbnailActive:hover {
    padding: 0px;
    border: 3px solid black;
    box-shadow: 2px 2px 4px #888;
    outline: 1px solid black;
}

.halloimage-metadata {
    margin-top: 20px;
    text-align: left;
}

.halloimage-metadata label {
    color: #A1A1A1;
    font-size: 14px;
}

.halloimage-metadata button {
    color: white;
    background-color: #646464;
    padding: 5px;
    border: 0;
    border-radius: 3px;
    margin-top: 10px;
}

.halloimage-metadata button:hover {
    background-color: #01add2;
}

.ui-dialog input.searchInput{
    height: 28px;
    width: 178px;
    border: none !important;
    box-shadow: none !important;
    background: url(/bundles/liipvie/img/search_input.png)
}

.ui-dialog input.searchButton{
    background: url("/bundles/liipvie/img/ok_button.png") repeat scroll 0 0 transparent;
    text-indent: 1000px;
    overflow: hidden;
    border: none;
    width: 56px;
    height: 34px;
    position: relative;
    top: 1px;
}

.ui-dialog .searchResults{
    padding: 15px 0 0 0;
}

.ui-dialog .linkForm{
    padding: 23px 32px;
}

/**************************************/
/* This is used by the overlay plugin */
/**************************************/
.halloOverlay {
    background-color: #000000;
    opacity: 0.5;
}

